# Ihearyou_bot

./: .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.MD  alembic.ini  docker-compose.stage.yml  docker-compose.yml  file::memory:  init.sql  pyproject.toml  pytest.ini  requirements.txt
.conf/: .flake8  .pre-commit-config.yaml  .pre-commit-setup.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_09_29-e8a9cd7e3164_initial_migration.py  2025_10_01-2029a01863c3_delete_notification_amend_remainder_.py  2025_10_01-e613096a39ad_delete_notification_amend_remainder_.py  2025_10_01_add_web_app_url.py  2025_10_03-448b0bbbad8c_initial_migration.py
backend/: README.md  __init__.py  api.py  auth.py  database.py  load_flow_data.py  main.py  models.py  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_09_28-ac17ee671d25_initial_migration.py
backend/api/: __init__.py  routers.py
backend/api/v1/: __init__.py  webhook.py
backend/api/v1/admin/: __init__.py  admin_user.py  analytics.py  auth.py  menu.py  message_template.py  notification.py  notifications.py  question.py  questions.py  reminder_template.py  reminder_templates.py  telegram_user.py  user.py  users.py
backend/api/v1/bot/: __init__.py  message_template.py  reminder.py  reminder_template.py  telegram_user.py
backend/api/v1/public/: __init__.py  menu.py  question.py  ratings.py  search.py  user_activities.py  user_activity.py  user_question.py  user_questions.py
backend/core/: __init__.py  cache.py  celery_app.py  config.py  db.py  dependencies.py  exception_handlers.py  exceptions.py  security.py  tasks.py
backend/crud/: __init__.py  admin_user.py  analytics.py  base.py  content_file.py  menu_item.py  message_template.py  notification.py  question.py  relinder_template.py  reminder_template.py  telegram_user.py  user_activity.py
backend/models/: __init__.py  admin_user.py  content_file.py  enums.py  menu.py  menu_item.py  message_template.py  notification.py  question.py  reminder_template.py  telegram_user.py  user_activity.py
backend/schemas/: __init__.py  webhook.py
backend/schemas/admin/: __init__.py  admin_manage.py  admin_user.py  analytics.py  auth.py  menu.py  message_template.py  notification.py  notifications.py  question.py  reminder_template.py  reminder_templates.py  telegram_user.py  user.py
backend/schemas/bot/: __init__.py  message_template.py  reminder.py  reminder_template.py  telegram_user.py
backend/schemas/public/: __init__.py  menu.py  question.py  ratings.py  search.py  user_activities.py  user_activity.py  user_question.py  user_questions.py
backend/services/: __init__.py  admin_user.py  analytics.py  content_file.py  menu_item.py  message_template.py  notification.py  question.py  ratings.py  reminder.py  reminder_template.py  telegram_user.py  user_activity.py
backend/tests/: conftest.py  fixtures.py  test_admin_management.py  test_admin_notification.py  test_analytics_reporting.py  test_auth_admin.py  test_bot_integration.py  test_bot_telegram_users.py  test_config.py  test_core_functionality.py  test_menu_management.py  test_message_template.py  test_message_template_api.py  test_notifications_system.py  test_public_api.py  test_questions_support.py  test_rating_system.py  test_search_functionality.py  test_user_management.py  test_utils_helpers.py
backend/utils/: analytics.py  email.py  ensure_default_admin.py
backend/validators/: __init__.py  admin_user.py  analytics.py  content_file.py  menu_item.py  message_template.py  notification.py  question.py  reminder_template.py  telegram_user.py  user_activity.py
bot/: README.MD  README.md  __init__.py  api_client.py  config.py  db.py  dict.py  handlers.py  handlers_navigation.py  kb.py  main.py  reminders.py  scheduler_tasks.py  states.py
bot/handlers/: __init__.py  menu.py  question.py  rating.py  search.py  start.py
bot/middleware/: __init__.py  logging.py  user_registration.py
bot/services/: __init__.py  menu_service.py  question_service.py  rating_service.py  reminder_service.py  user_activity_service.py
bot/utils/: __init__.py  api_client.py  content_handlers.py  keyboards.py
frontend/: .prettierrc  .stylelintrc.ts  Dockerfile  README.md  api.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
frontend/docker/: Dockerfile
frontend/src/: App.tsx  index.css  main.tsx  theme.tsx
frontend/src/api/: client.ts
frontend/src/app/: app.tsx  fonts.less
frontend/src/app/styles/: globals.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/entities/: index.ts
frontend/src/entities/analytics/: index.ts
frontend/src/entities/notifications/: index.ts
frontend/src/entities/page/: index.ts
frontend/src/entities/user/: index.ts
frontend/src/features/access-rights/: access-rights.tsx  index.ts
frontend/src/features/analytics/: analytics.tsx
frontend/src/features/auth/: auth.tsx
frontend/src/features/materials/: materials.tsx
frontend/src/features/notifications/: index.ts  notifications.tsx
frontend/src/features/page-switcher/: index.ts  page-switcher.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  index.ts
frontend/src/pages/access/: access-page.tsx  index.ts
frontend/src/pages/dashboard/: dashboard-page.tsx
frontend/src/pages/edit/: edit-page.tsx  index.ts
frontend/src/pages/error/: error-page.tsx  index.ts
frontend/src/pages/files/: files-page.tsx  index.ts
frontend/src/pages/login/: login-page.tsx
frontend/src/pages/main/: main.tsx
frontend/src/pages/reminders/: index.ts  reminders-page.tsx
frontend/src/processes/router/: app-router.tsx
frontend/src/shared/api/: api.ts  interceptors.ts
frontend/src/shared/error-boundary/: api-error-boundary.tsx  error-boundary.tsx  index.ts  interceptors.ts
frontend/src/shared/guards/: auth-guard.tsx  index.ts
migrations/: 001_add_article_ratings.sql
tests/: conftest.py
(+221 files in other folders)
