[tool.poetry]
name = "ihearyou-bot"
version = "1.0.0"
description = "Telegram бот для сбора обращений пользователей с админ-панелью"
authors = ["IHearYou Team"]
readme = "README.MD"
packages = [
    {include = "bot"},
    {include = "backend"}
]

[tool.poetry.dependencies]
python = "^3.10"
# Core Bot Dependencies
aiogram = "^3.21.0"
aiohttp = "^3.9.0"
httpx = "^0.28.1"

# Configuration
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"

# Storage and Caching
redis = "^5.0.0"
aioredis = "^2.0.0"

# Database
asyncpg = "^0.29.0"
SQLAlchemy = "^2.0.0"
alembic = "^1.12.0"

# Monitoring and Logging
sentry-sdk = "^1.40.0"
prometheus-client = "^0.19.0"

# Utilities
frozendict = "^2.3.0"
typing-extensions = "^4.8.0"

# Backend (FastAPI)
fastapi = "^0.112.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
email-validator = "^2.3.0"
fastapi-mail = "^1.4.1"

# Scheduling
apscheduler = "^3.11.0"

# Support libraries
aiofiles = "^24.1.0"
annotated-types = "^0.7.0"
typing-inspection = "^0.4.1"
idna = "^3.10"
certifi = "^2025.4.26"
attrs = "^25.3.0"
magic-filter = "^1.0.12"
multidict = "^6.4.4"
propcache = "^0.3.1"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
# Code quality and formatting
pre-commit = "^3.6.2"
ruff = "^0.8.4"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.6.0"

# Testing
pytest = "^8.4.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"

# Development database
aiosqlite = "^0.21.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-postgresql = "^6.0.0"
aiosqlite = "^0.21.0"
httpx = {extras = ["testing"], version = "^0.28.1"}

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["backend/tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "backend/tests/",
    "backend/alembic/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "Q", "D"]
ignore = ["E203", "D100", "D103", "D106", "D415", "D417", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "bot"]
force-single-line = false
lines-after-imports = 2
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"
