[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ihearyou-bot"
version = "1.0.0"
description = "Telegram бот для сбора обращений пользователей с админ-панелью"
authors = [
    {name = "IHearYou Team"}
]
readme = "README.MD"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.20.0.post0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "certifi==2025.4.26",
    "frozendict==2.4.6",
    "frozenlist==1.6.0",
    "idna==3.10",
    "magic-filter==1.0.12",
    "multidict==6.4.4",
    "propcache==0.3.1",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.5",
    "pydantic_core==2.33.2",
    "python-dotenv==1.1.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.13.2",
    "yarl==1.20.0",
    "fastapi==0.112.2",
    "uvicorn[standard]==0.30.6",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "SQLAlchemy==2.0.34",
]

[project.optional-dependencies]
dev = [
    "black==24.1.1",
    "isort==5.13.2",
    "flake8==7.0.0",
    "pre-commit==3.6.2",
    "watchdog==6.0.0",
]

[tool.black]
line-length = 118
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 118
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
